# voxelization_and_sdf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
app/: test_occupancyGrid.cpp  test_occupancyGridWithColor.cpp  test_sdf.cpp
data/: Lucy5k.ply  README.md
include/: colorPalette.h  occupancyGrid.h  occupancyGridWithColor.h  sdf.h
utils/: sgn.h
utils/EigenTools/: getMinMax.h  nanoflannWrapper.h
utils/IO/: process_folder.h  readPLY.h  structures.h  tinyply.h  writePLY.h  writePNG.h
utils/mesh/: computeFacesCentroids.h  computeNormals.h
utils/visualization/: plotCloud.h  plotMesh.h  plotTwoMeshes.h
